fix(clipboard): prevent button overflow

--- a/packages/ods/src/components/clipboard/src/components/ods-clipboard/ods-clipboard.scss
+++ b/packages/ods/src/components/clipboard/src/components/ods-clipboard/ods-clipboard.scss
@@ -19,6 +19,7 @@
     bottom: input.$ods-input-actions-padding-right;
     align-items: center;
     justify-content: center;
+    height: auto;
 
     &::part(button) {
       padding: input.$ods-input-actions-padding-right;
